# tg-customer-support-plugin

./: .gitignore  CONCEPTS.md  CONTRIBUTING.md  LICENSE  README.md  marketplace.json  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: claude.md  openai.yaml
docs/: claude-usage.md  setup.md
docs/brainstorms/: 2026-06-25-agent-led-setup-requirements.md  2026-06-25-github-repo-evidence-requirements.md  2026-06-25-manual-knowledge-notes-requirements.md  2026-06-25-sqlite-hybrid-search-requirements.md  2026-06-26-display-name-author-retrieval-requirements.md  2026-06-26-evidence-aware-draft-fallback-requirements.md  2026-06-26-support-exchange-retrieval-requirements.md  2026-06-26-username-exact-match-boosting-requirements.md  telegram-support-agent-requirements.md
docs/plans/: 2026-06-25-001-feat-telegram-support-agent-plugin-plan.md  2026-06-25-002-feat-agent-led-setup-plan.md  2026-06-25-003-feat-manual-knowledge-notes-plan.md  2026-06-25-004-feat-github-repo-evidence-plan.md  2026-06-25-005-feat-sqlite-hybrid-search-plan.md  (+4 more)
scripts/: tg-support
skills/telegram-support/: SKILL.md
tests/: conftest.py  test_chunking.py  test_cli_setup.py  test_config.py  test_crawler.py  test_exchanges.py  test_hybrid_retrieval.py  test_manual_knowledge.py  test_posting_confirmation.py  test_renderer.py  test_repository.py  test_repository_evidence.py  test_stats.py  test_storage.py  test_telegram_client.py
tg_support/: __init__.py  cli.py  config.py  crawler.py  renderer.py  repository.py  telegram_client.py
(+18 files in other folders)
