[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-support-plugin"
version = "0.1.0"
description = "Local Telegram support agent plugin core and CLI"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.31",
]

[project.optional-dependencies]
telegram = ["telethon>=1.36"]
render = ["playwright>=1.44"]
retrieval = [
  "sentence-transformers>=3.0",
  "sqlite-vec>=0.1",
]
dev = ["pytest>=8"]

[project.scripts]
tg-support = "tg_support.cli:main"

[tool.setuptools.packages.find]
include = ["tg_support*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
